COM-2600 Fixed AlignMent

--- a/stylesheets/modules/b2b-account/account-address-search.less
+++ b/stylesheets/modules/b2b-account/account-address-search.less
@@ -64,4 +64,12 @@ display: inline-block !important;
     padding-right: 20px !important;
     padding-right: 2% !important;
 }
+.mz-text-margin
+{
+  margin-left: 3%;
+}
+.mz-email-text-margin
+{
+  margin-left: 5%;
+}
 
